--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/native": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "react": "18.2.0",
     "react-native": "0.72.6"
   },
@@ -25,8 +27,11 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
+    "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.0",
     "jest": "^29.2.1",
     "lint-staged": "^15.0.1",
@@ -37,7 +42,6 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
-      "yarn build",
       "yarn lint"
     ]
   },
