--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@emotion/native": "^11.11.0",
     "@emotion/react": "^11.11.1",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.19",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-splash-screen": "^3.3.0"
