--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.3.19",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-gesture-handler": "^2.13.3",
     "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
