--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "@emotion/native": "^11.11.0",
     "@emotion/react": "^11.11.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.19",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.13.3",
-    "react-native-splash-screen": "^3.3.0"
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.7.3",
+    "react-native-screens": "^3.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
